top sales created

--- a/app/index.html
+++ b/app/index.html
@@ -156,35 +156,122 @@
 
         <section class="category">
             <div class="container">
+                <div class="row justify-content-between">
+                    <div class="col">
+                        <div class="category__cart">
+                            <img class="category__cart__img" src="img/category_1.JPG" alt="Image Category">
+                            <div class="category__cart__text">
+                                <h2 class="cart-title h2-style">Пледы</h2>
+                                <a class="fill-button" href="#">Посмотреть</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="category__cart">
+                            <img class="category__cart__img" src="img/category_2.jpg" alt="Image Category">
+                            <div class="category__cart__text">
+                                <h2 class="cart-title h2-style">Одеяла</h2>
+                                <a class="fill-button" href="#">Посмотреть</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="category__cart">
+                            <div class="category__cart__text">
+                                <h2 class="cart-title h2-style">Ещё</h2>
+                                <p class="cart-description lights-fiveteen">Посмотреть остальные категории :)</p>
+                                <a class="fill-button" href="#">Посмотреть</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="big-products">
+            <div class="container">
+                <div class="section-title">
+                    <h2 class="section-text__title h2-style">Топ продаж</h2>
+                    <p class="seciton-text__description regular-fiveteen">Самые продоваемые товары этого месяца!</p>
+                </div>
                 <div class="row">
-                    <div class="col">
-                        <div class="category__cart">
-                            <img src="/" alt="Image Category">
-                            <div class="category__cart__text">
-                                <h2 class="cart-title h2-style">Пледы</h2>
-                                <a class="fill-button" href="#">Посмотреть</a>
+                    <ul class="big-products__list">
+                        <!-- Big Products Item -->
+                        <li class="big-products__list__item">
+                            <div class="product-cart">
+                                <div class="product-cart__top">
+                                    <small class="new-icon">Новое</small>
+                                    <figure class="figure-product">
+                                        <img class="product-img figure-product__first" src="img/product_1.jpg" alt="Картинка товара">
+                                        <img class="product-img figure-product__second" src="img/category_1.JPG" alt="Картинка товара">
+                                    </figure>
+                                    <a class="fast-view" href="#">Быстрый просмотр</a>
+                                </div>
+                                <div class="product-cart__bottom">
+                                    <div class="product-cart__bottom__left">
+                                        <h4 class="product-title h4-style">Постельное бельё Stelvio</h4>
+                                        <div class="product-cart__bottom__left__links">
+                                            <p class="price regular-fiveteen">BYN 40.00</p>
+                                            <a class="view-product-link regular-fiveteen" href="#">Просмотреть продукт</a>
+                                        </div>
+                                    </div>
+                                    <div class="product-cart__bottom__right">
+                                        <img class="add-like" src="img/Icon/Dark/Like.svg" alt="Like">
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="category__cart">
-                            <img src="/" alt="Image Category">
-                            <div class="category__cart__text">
-                                <h2 class="cart-title h2-style">Пледы</h2>
-                                <a class="fill-button" href="#">Посмотреть</a>
+                        </li>
+                        
+                        <li class="big-products__list__item">
+                            <div class="product-cart">
+                                <div class="product-cart__top">
+                                    <figure class="figure-product">
+                                        <img class="product-img figure-product__first" src="img/product_1.jpg" alt="Картинка товара">
+                                        <img class="product-img figure-product__second" src="img/category_1.JPG" alt="Картинка товара">
+                                    </figure>
+                                    <a class="fast-view" href="#">Быстрый просмотр</a>
+                                </div>
+                                <div class="product-cart__bottom">
+                                    <div class="product-cart__bottom__left">
+                                        <h4 class="product-title h4-style">Постельное бельё Stelvio</h4>
+                                        <div class="product-cart__bottom__left__links">
+                                            <p class="price regular-fiveteen">BYN 40.00</p>
+                                            <a class="view-product-link regular-fiveteen" href="#">Просмотреть продукт</a>
+                                        </div>
+                                    </div>
+                                    <div class="product-cart__bottom__right">
+                                        <img class="add-like" src="img/Icon/Dark/Like.svg" alt="Like">
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="category__cart">
-                            <img src="/" alt="Image Category">
-                            <div class="category__cart__text">
-                                <h2 class="cart-title h2-style">Пледы</h2>
-                                <p class="cart-description">Посмотреть остальные категории :)</p>
-                                <a class="fill-button" href="#">Посмотреть</a>
+                        </li>
+
+                        <li class="big-products__list__item">
+                            <div class="product-cart">
+                                <div class="product-cart__top">
+                                    <small class="new-icon">Новое</small>
+                                    <figure class="figure-product">
+                                        <img class="product-img figure-product__first" src="img/product_1.jpg" alt="Картинка товара">
+                                        <img class="product-img figure-product__second" src="img/category_2.JPG" alt="Картинка товара">
+                                    </figure>
+                                    <a class="fast-view" href="#">Быстрый просмотр</a>
+                                </div>
+                                <div class="product-cart__bottom">
+                                    <div class="product-cart__bottom__left">
+                                        <h4 class="product-title h4-style">Постельное бельё Stelvio</h4>
+                                        <div class="product-cart__bottom__left__links">
+                                            <p class="price regular-fiveteen">BYN 40.00</p>
+                                            <a class="view-product-link regular-fiveteen" href="#">Просмотреть продукт</a>
+                                        </div>
+                                    </div>
+                                    <div class="product-cart__bottom__right">
+                                        <img class="add-like" src="img/Icon/Dark/Like.svg" alt="Like">
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
+                        </li>
+                        <!-- Big Products Item -->
+                    </ul>
                 </div>
             </div>
         </section>
