--- a/app/index.html
+++ b/app/index.html
@@ -276,6 +276,195 @@
             </div>
         </section>
 
+        <section class="feedback">
+            <div class="container">
+                <div class="section-title">
+                    <h2 class="section-text__title h2-style">Отзывы</h2>
+                </div>
+                <div class="feedback__slider">
+                    <div id="feedback__slider__img" class="feedback__slider__img">
+                        <div class="feedback__img__el">
+                            <div class="img-cover">
+                                <img class="img-cover__img" src="img/slide-1.jpg" alt="Avatar">
+                            </div>
+                        </div>
+                        <div class="feedback__img__el">
+                            <div class="img-cover">
+                                <img class="img-cover__img" src="img/slide-2.jpg" alt="Avatar">
+                            </div>
+                        </div>
+                        <div class="feedback__img__el">
+                            <div class="img-cover">
+                                <img class="img-cover__img" src="img/category_2.jpg" alt="Avatar">
+                            </div>
+                        </div>
+                        <div class="feedback__img__el">
+                            <div class="img-cover">
+                                <img class="img-cover__img" src="img/category_1.JPG" alt="Avatar">
+                            </div>
+                        </div>
+                    </div>
+                    <div id="feedback__slider__text" class="feedback__slider__text">
+                        <div class="feedback__text__el">
+                            <cite class="el-name medium-ninteen">Кирил Муравьёв</cite>
+                            <p class="el-description regular-fiveteen">Это лучший интернет магазин, которым я пользовался. Всё современно и стильно. Очень круто.</p>
+                        </div>
+                        <div class="feedback__text__el">
+                            <cite class="el-name medium-ninteen">Дмитрий Шестак</cite>
+                            <p class="el-description regular-fiveteen">Это лучший интернет магазин, которым я пользовался. Всё современно и стильно. Очень круто.</p>
+                        </div>
+                        <div class="feedback__text__el">
+                            <cite class="el-name medium-ninteen">Кирил Муравьёв</cite>
+                            <p class="el-description regular-fiveteen">Это лучший интернет магазин, которым я пользовался. Всё современно и стильно. Очень круто.</p>
+                        </div>
+                        <div class="feedback__text__el">
+                            <cite class="el-name medium-ninteen">Кирил Муравьёв</cite>
+                            <p class="el-description regular-fiveteen">Это лучший интернет магазин, которым я пользовался. Всё современно и стильно. Очень круто.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="small-products">
+            <div class="container">
+                <div class="section-title">
+                    <h2 class="section-text__title h2-style">Новые поступления</h2>
+                    <p class="seciton-text__description regular-fiveteen">Новые поступления посмотри сейчас, пока не раскупили!</p>
+                </div>
+                <div class="row">
+                    <ul class="small-products__list">
+                        <!-- Small Products Item -->
+                        <li class="small-products__list__item">
+                            <div class="product-cart small-product-cart">
+                                <div class="product-cart__top">
+                                    <small class="new-icon">Новое</small>
+                                    <figure class="figure-product">
+                                        <img class="product-img figure-product__first" src="img/product_1.jpg" alt="Картинка товара">
+                                        <img class="product-img figure-product__second" src="img/category_1.JPG" alt="Картинка товара">
+                                    </figure>
+                                    <a class="fast-view" href="#">Быстрый просмотр</a>
+                                </div>
+                                <div class="product-cart__bottom">
+                                    <div class="product-cart__bottom__left">
+                                        <h4 class="product-title h4-style">Постельное бельё Stelvio</h4>
+                                        <div class="product-cart__bottom__left__links">
+                                            <p class="price regular-fiveteen">BYN 40.00</p>
+                                            <a class="view-product-link regular-fiveteen" href="#">Просмотреть продукт</a>
+                                        </div>
+                                    </div>
+                                    <div class="product-cart__bottom__right">
+                                        <img class="add-like" src="img/Icon/Dark/Like.svg" alt="Like">
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        
+                        <li class="small-products__list__item">
+                            <div class="product-cart small-product-cart">
+                                <div class="product-cart__top">
+                                    <small class="new-icon">Новое</small>
+                                    <figure class="figure-product">
+                                        <img class="product-img figure-product__first" src="img/product_1.jpg" alt="Картинка товара">
+                                        <img class="product-img figure-product__second" src="img/category_1.JPG" alt="Картинка товара">
+                                    </figure>
+                                    <a class="fast-view" href="#">Быстрый просмотр</a>
+                                </div>
+                                <div class="product-cart__bottom">
+                                    <div class="product-cart__bottom__left">
+                                        <h4 class="product-title h4-style">Постельное бельё Stelvio</h4>
+                                        <div class="product-cart__bottom__left__links">
+                                            <p class="price regular-fiveteen">BYN 40.00</p>
+                                            <a class="view-product-link regular-fiveteen" href="#">Просмотреть продукт</a>
+                                        </div>
+                                    </div>
+                                    <div class="product-cart__bottom__right">
+                                        <img class="add-like" src="img/Icon/Dark/Like.svg" alt="Like">
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="small-products__list__item">
+                            <div class="product-cart small-product-cart">
+                                <div class="product-cart__top">
+                                    <small class="new-icon">Новое</small>
+                                    <figure class="figure-product">
+                                        <img class="product-img figure-product__first" src="img/product_1.jpg" alt="Картинка товара">
+                                        <img class="product-img figure-product__second" src="img/category_1.JPG" alt="Картинка товара">
+                                    </figure>
+                                    <a class="fast-view" href="#">Быстрый просмотр</a>
+                                </div>
+                                <div class="product-cart__bottom">
+                                    <div class="product-cart__bottom__left">
+                                        <h4 class="product-title h4-style">Постельное бельё Stelvio</h4>
+                                        <div class="product-cart__bottom__left__links">
+                                            <p class="price regular-fiveteen">BYN 40.00</p>
+                                            <a class="view-product-link regular-fiveteen" href="#">Просмотреть продукт</a>
+                                        </div>
+                                    </div>
+                                    <div class="product-cart__bottom__right">
+                                        <img class="add-like" src="img/Icon/Dark/Like.svg" alt="Like">
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="small-products__list__item">
+                            <div class="product-cart small-product-cart">
+                                <div class="product-cart__top">
+                                    <small class="new-icon">Новое</small>
+                                    <figure class="figure-product">
+                                        <img class="product-img figure-product__first" src="img/product_1.jpg" alt="Картинка товара">
+                                        <img class="product-img figure-product__second" src="img/category_1.JPG" alt="Картинка товара">
+                                    </figure>
+                                    <a class="fast-view" href="#">Быстрый просмотр</a>
+                                </div>
+                                <div class="product-cart__bottom">
+                                    <div class="product-cart__bottom__left">
+                                        <h4 class="product-title h4-style">Постельное бельё Stelvio</h4>
+                                        <div class="product-cart__bottom__left__links">
+                                            <p class="price regular-fiveteen">BYN 40.00</p>
+                                            <a class="view-product-link regular-fiveteen" href="#">Просмотреть продукт</a>
+                                        </div>
+                                    </div>
+                                    <div class="product-cart__bottom__right">
+                                        <img class="add-like" src="img/Icon/Dark/Like.svg" alt="Like">
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <!-- Small Products Item -->
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="about">
+            <div class="container">
+                <div class="section-title">
+                    <h2 class="section-text__title h2-style">Не много о Bluins</h2>
+                    <p class="seciton-text__description regular-fiveteen">Мы молодая и прогрессивная компания по продаже изделий из ткани. Не много плюсов о работе с нами.</p>
+                </div>
+                <div class="about__content">
+                    <div class="about__content__img-cover">
+                        <img class="about__content__img-cover__img" src="img/slide-2.jpg" alt="Bluins">
+                    </div>
+                    <div class="about__content__text">
+                        <div class="text-box text-left">
+                            <p class="medium-ninteen">Быстрая доставка</p>
+                        </div>
+                        <div class="text-box text-center">
+                            <p class="medium-ninteen">Лучшие товары</p>
+                        </div>
+                        <div class="text-box text-right">
+                            <p class="medium-ninteen">Своевременная поддержка</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
     <!-- Main -->
     </main>
