--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,69 @@
 </head>
 <body>
 
+    <div id="fullscreen-menu" class="fullscreen-menu">
+        <div class="container">
+            <div class="close-button-cover">
+                <button id="close-button" class="close-button"></button>
+            </div>
+            <nav class="fullscreen-menu__nav">
+                <ul class="fullscreen__nav__list">
+                    <li class="fullscreen__nav__list__item curent-hover">
+                        <a class="regular-ninteen" href="#">Главная</a>
+                        <span class="arrow-cover">
+                            <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
+                        </span>
+                    </li>
+                    <li class="fullscreen__nav__list__item">
+                        <a class="regular-ninteen" href="#">Товары</a>
+                        <span class="arrow-cover">
+                            <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
+                        </span>
+                        <ul class="fullscreen__sub-menu">
+                            <li class="fullscreen__sub-menu__item">
+                                <a class="medium-ninteen" href="#">Категории</a>
+                                <ul class="fullscreen__sub-menu__item__pages">
+                                    <li><a class="light-seventeen" href="#">Пледы</a></li>
+                                    <li><a class="light-seventeen" href="#">Одеяла</a></li>
+                                    <li><a class="light-seventeen" href="#">Подушки</a></li>
+                                    <li><a class="light-seventeen" href="#">Покрывала</a></li>
+                                </ul>
+                            </li>
+                            <li class="fullscreen__sub-menu__item">
+                                <a class="medium-ninteen" href="#">Материалы</a>
+                                <ul class="fullscreen__sub-menu__item__pages">
+                                    <li><a class="light-seventeen" href="#">Лён</a></li>
+                                    <li><a class="light-seventeen" href="#">Синтетика</a></li>
+                                    <li><a class="light-seventeen" href="#">Ткань</a></li>
+                                </ul>
+                            </li>
+                            <li class="fullscreen__sub-menu__item">
+                                <a class="medium-ninteen" href="#">Пледы</a>
+                                <ul class="fullscreen__sub-menu__item__pages">
+                                    <li><a class="light-seventeen" href="#">Пледы</a></li>
+                                    <li><a class="light-seventeen" href="#">Одеяла</a></li>
+                                    <li><a class="light-seventeen" href="#">Подушки</a></li>
+                                    <li><a class="light-seventeen" href="#">Покрывала</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="fullscreen__nav__list__item">
+                        <a class="regular-ninteen" href="#">Контакты</a>
+                        <span class="arrow-cover">
+                            <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
+                        </span>
+                    </li>
+                    <li class="fullscreen__nav__list__item">
+                        <a class="regular-ninteen" href="#">О нас</a>
+                        <span class="arrow-cover">
+                            <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
+                        </span>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 
     <header class="header">
     <!-- Header -->
@@ -50,7 +113,7 @@
                 <div class="header__bottom__content">
                     <div class="header__bottom__content__left">
                         <div class="burger">
-                            <button class="burger__button">
+                            <button id="burger__button" class="burger__button">
                                 <img src="img/Icon/Menu.svg" width="45px" height="45px" alt="Меню">
                             </button>
                         </div>
@@ -132,10 +195,16 @@
                 <div class="slick-slider__item">
                     <img class="slick-slider__item__img" width="100%" height="100%" src="img/slide-1.jpg" alt="Slider Img">
                     <div class="slick-slider__item__content">
-                        <h2 class="title-slider h1-style">Мне кажется, что выбор дизайнером этих значений не случаен</h2>
+                        <div class="h2-cover">
+                            <h2 class="title-slider h1-style">Мне кажется, что выбор дизайнером этих значений не случаен</h2>
+                        </div>
                         <div class="description">
-                            <p class="description__text regular-seventeen">В тексте заголовка (см. выше) используется полужирное начертание Futura 48px, 45px. Возможно вы уже заметили, что иногда я специально акцентирую ваше внимание на кегле шрифтов и межстрочных</p>
-                            <a class="line-button" href="#">Перейти</a>
+                            <div class="description__text-cover">
+                                <p class="description__text regular-seventeen">В тексте заголовка (см. выше) используется полужирное начертание Futura 48px, 45px. Возможно вы уже заметили, что иногда я специально акцентирую ваше внимание на кегле шрифтов и межстрочных</p>
+                            </div>
+                            <div class="line-button-cover">
+                                <a class="line-button" href="#">Перейти</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -143,10 +212,16 @@
                 <div class="slick-slider__item">
                     <img class="slick-slider__item__img" width="100%" height="100%" src="img/slide-2.jpg" alt="Slider Img">
                     <div class="slick-slider__item__content">
-                        <h2 class="title-slider h1-style">Мне кажется, что выбор дизайнером этих значений не случаен</h2>
+                        <div class="h2-cover">
+                            <h2 class="title-slider h1-style">Мне кажется, что выбор дизайнером этих значений не случаен</h2>
+                        </div>
                         <div class="description">
-                            <p class="description__text regular-seventeen">В тексте заголовка (см. выше) используется полужирное начертание Futura 48px, 45px. Возможно вы уже заметили, что иногда я специально акцентирую ваше внимание на кегле шрифтов и межстрочных</p>
-                            <a class="line-button" href="#">Перейти</a>
+                            <div class="description__text-cover">
+                                <p class="description__text regular-seventeen">В тексте заголовка (см. выше) используется полужирное начертание Futura 48px, 45px. Возможно вы уже заметили, что иногда я специально акцентирую ваше внимание на кегле шрифтов и межстрочных</p>
+                            </div>
+                            <div class="line-button-cover">
+                                <a class="line-button" href="#">Перейти</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -285,22 +360,22 @@
                     <div id="feedback__slider__img" class="feedback__slider__img">
                         <div class="feedback__img__el">
                             <div class="img-cover">
-                                <img class="img-cover__img" src="img/slide-1.jpg" alt="Avatar">
+                                <img class="img-cover__img" src="img/slide-1.jpg" alt="Slide 1">
                             </div>
                         </div>
                         <div class="feedback__img__el">
                             <div class="img-cover">
-                                <img class="img-cover__img" src="img/slide-2.jpg" alt="Avatar">
+                                <img class="img-cover__img" src="img/slide-2.jpg" alt="Slide 2">
                             </div>
                         </div>
                         <div class="feedback__img__el">
                             <div class="img-cover">
-                                <img class="img-cover__img" src="img/category_2.jpg" alt="Avatar">
+                                <img class="img-cover__img" src="img/category_2.jpg" alt="Slide 3">
                             </div>
                         </div>
                         <div class="feedback__img__el">
                             <div class="img-cover">
-                                <img class="img-cover__img" src="img/category_1.JPG" alt="Avatar">
+                                <img class="img-cover__img" src="img/category_1.JPG" alt="Slide 4">
                             </div>
                         </div>
                     </div>
