--- a/app/index.html
+++ b/app/index.html
@@ -84,75 +84,77 @@
 
     <!-- Cart -->
     <div id="cart-menu" class="cart">
-        <div class="cart__top">
-            <h3 class="h3-style">Корзина</h3>
-            <button id="close-button-cart" class="close-button"></button>
-        </div>
-        <div class="cart__center">
-            <nav class="cart__center__nav">
-                <ul class="cart__center__nav__list">
-                    <!-- List -->
-                    <li class="cart-list-item">
-                        <div class="item__img-cover">
-                            <img class="item__img-cover__img" src="img/product_1.jpg" alt="Товар">
-                        </div>
-                        <div class="item__content">
-                            <span class="item__content__title">
-                                <a href="#">Постельное бельё Stelvio</a>
-                                <button id="close-button" class="close-button"></button>
-                            </span>
-                            <div class="product-quantity-price">
-                                <div class="item-quantity">
-                                    <span class="minus">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" viewBox="0 0 33 33"><rect width="33" height="33" fill="none"/><g transform="translate(11 16)"><g transform="translate(0 0)"><rect width="11.432" height="1.429" rx="0.715" fill="#fff"/></g></g></svg>
-                                    </span>
-                                    <input class="input-number" type="number" step="1" min="1" value="1">
-                                    <span class="plus">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" viewBox="0 0 33 33"><rect width="33" height="33" fill="none"/><g transform="translate(11 11)"><g transform="translate(0)"><rect width="11.43" height="1.43" rx="0.715" transform="translate(0 5)" fill="#fff"/><rect width="11.43" height="1.43" rx="0.715" transform="translate(6.43) rotate(90)" fill="#fff"/></g></g></svg>
-                                    </span>
-                                </div>
-                                <div class="item-price">
-                                    <span class="price">BYN 60.00</span>
+        <div class="box-flex">
+            <div class="cart__top">
+                <h3 class="h3-style">Корзина</h3>
+                <button id="close-button-cart" class="close-button"></button>
+            </div>
+            <div class="cart__center">
+                <nav class="cart__center__nav">
+                    <ul class="cart__center__nav__list">
+                        <!-- List -->
+                        <li class="cart-list-item">
+                            <div class="item__img-cover">
+                                <img class="item__img-cover__img" src="img/product_1.jpg" alt="Товар">
+                            </div>
+                            <div class="item__content">
+                                <span class="item__content__title">
+                                    <a class="medium-fiveteen" href="#">Постельное бельё Stelvio</a>
+                                    <button id="close-button" class="close-button"></button>
+                                </span>
+                                <div class="product-quantity-price">
+                                    <div class="item-quantity">
+                                        <span class="minus">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" viewBox="0 0 33 33"><rect width="33" height="33" fill="none"/><g transform="translate(11 16)"><g transform="translate(0 0)"><rect width="11.432" height="1.429" rx="0.715" fill="#fff"/></g></g></svg>
+                                        </span>
+                                        <input class="input-number" type="number" step="1" min="1" value="1">
+                                        <span class="plus">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" viewBox="0 0 33 33"><rect width="33" height="33" fill="none"/><g transform="translate(11 11)"><g transform="translate(0)"><rect width="11.43" height="1.43" rx="0.715" transform="translate(0 5)" fill="#fff"/><rect width="11.43" height="1.43" rx="0.715" transform="translate(6.43) rotate(90)" fill="#fff"/></g></g></svg>
+                                        </span>
+                                    </div>
+                                    <div class="item-price">
+                                        <span class="price">BYN 60.00</span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </li>
-                    
-                    <li class="cart-list-item">
-                        <div class="item__img-cover">
-                            <img class="item__img-cover__img" src="img/product_1.jpg" alt="Товар">
-                        </div>
-                        <div class="item__content">
-                            <span class="item__content__title">
-                                <a href="#">Постельное бельё Stelvio</a>
-                                <button id="close-button" class="close-button"></button>
-                            </span>
-                            <div class="product-quantity-price">
-                                <div class="item-quantity">
-                                    <span class="minus">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" viewBox="0 0 33 33"><rect width="33" height="33" fill="none"/><g transform="translate(11 16)"><g transform="translate(0 0)"><rect width="11.432" height="1.429" rx="0.715" fill="#fff"/></g></g></svg>
-                                    </span>
-                                    <input class="input-number" type="number" step="1" min="1" value="1">
-                                    <span class="plus">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" viewBox="0 0 33 33"><rect width="33" height="33" fill="none"/><g transform="translate(11 11)"><g transform="translate(0)"><rect width="11.43" height="1.43" rx="0.715" transform="translate(0 5)" fill="#fff"/><rect width="11.43" height="1.43" rx="0.715" transform="translate(6.43) rotate(90)" fill="#fff"/></g></g></svg>
-                                    </span>
-                                </div>
-                                <div class="item-price">
-                                    <span class="price">BYN 60.00</span>
+                        </li>
+                        
+                        <li class="cart-list-item">
+                            <div class="item__img-cover">
+                                <img class="item__img-cover__img" src="img/product_1.jpg" alt="Товар">
+                            </div>
+                            <div class="item__content">
+                                <span class="item__content__title">
+                                    <a class="medium-fiveteen" href="#">Постельное бельё Stelvio</a>
+                                    <button id="close-button" class="close-button"></button>
+                                </span>
+                                <div class="product-quantity-price">
+                                    <div class="item-quantity">
+                                        <span class="minus">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" viewBox="0 0 33 33"><rect width="33" height="33" fill="none"/><g transform="translate(11 16)"><g transform="translate(0 0)"><rect width="11.432" height="1.429" rx="0.715" fill="#fff"/></g></g></svg>
+                                        </span>
+                                        <input class="input-number" type="number" step="1" min="1" value="1">
+                                        <span class="plus">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" viewBox="0 0 33 33"><rect width="33" height="33" fill="none"/><g transform="translate(11 11)"><g transform="translate(0)"><rect width="11.43" height="1.43" rx="0.715" transform="translate(0 5)" fill="#fff"/><rect width="11.43" height="1.43" rx="0.715" transform="translate(6.43) rotate(90)" fill="#fff"/></g></g></svg>
+                                        </span>
+                                    </div>
+                                    <div class="item-price">
+                                        <span class="price">BYN 60.00</span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </li>
-                    <!-- List -->
-                </ul>
-            </nav>
+                        </li>
+                        <!-- List -->
+                    </ul>
+                </nav>
+            </div>
         </div>
         <div class="cart__bottom">
             <div class="summ-for-price">
-                <span class="summ-for-price__text">К оплате:</span>
-                <span class="summ-for-price__price">BYN 240.00</span>
+                <span class="summ-for-price__text medium-fiveteen">К оплате:</span>
+                <span class="summ-for-price__price lights-fiveteen">BYN 240.00</span>
             </div>
-            <a class="stroce-button" href="#">Оформить заказ</a>
+            <a class="stroke-button" href="#">Оформить заказ</a>
         </div>
     </div>
     <div id="cart-overlay" class="cart-overlay"></div>
